oracle/prod/qinglong/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qinglong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qinglong
  template:
    metadata:
      labels:
        app: qinglong
    spec:
      containers:
      - name: qinglong
        image: whyour/qinglong:latest
        ports:
        - containerPort: 5700

---
apiVersion: v1
kind: Service
metadata:
  name: qinglong-service
spec:
  selector:
    app: qinglong
  ports:
  - port: 80
    targetPort: 5700
  type: ClusterIP
